--- a/employeemanagement-fontend-app/src/app/app.component.html
+++ b/employeemanagement-fontend-app/src/app/app.component.html
@@ -1,3 +1,184 @@
-<div *ngFor="let employee of employees">
-  <div>{{ employee.name }}</div>
-</div>
+<html>
+  <head>
+    <link
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <button type="button" class="btn-sm btn-primary">
+                Add Employee
+              </button>
+            </li>
+          </ul>
+          <form class="d-flex">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+            />
+            <button class="btn btn-outline-primary ml-2" type="submit">
+              Search
+            </button>
+          </form>
+        </div>
+      </div>
+    </nav>
+    <div class="content">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <a
+              href="#custom-modal"
+              class="btn btn-custom waves-effect waves-light mb-4"
+              data-animation="fadein"
+              data-plugin="custommodal"
+              data-overlayspeed="200"
+              data-overlaycolor="#36404a"
+              ><i class="mdi mdi-plus"></i
+            ></a>
+          </div>
+          <!-- end col -->
+        </div>
+        <!-- end row -->
+        <div class="row">
+          <div *ngFor="let employee of employees" class="col-lg-4">
+            <div class="text-center card-box">
+              <div class="member-card pt-2 pb-2">
+                <div class="thumb-lg member-thumb mx-auto">
+                  <img
+                    src="https://bootdey.com/img/Content/avatar/avatar2.png"
+                    class="rounded-circle img-thumbnail"
+                    alt="profile-image"
+                  />
+                </div>
+                <div class="">
+                  <h4>{{ employee?.name }}</h4>
+                  <p class="text-muted">
+                    {{ employee?.jobTitle }}<span>| </span
+                    ><span
+                      ><a href="#" class="text-pink">{{
+                        employee?.email
+                      }}</a></span
+                    >
+                  </p>
+                </div>
+                <div class="">
+                  <p class="text-muted">Phone : {{ employee?.phone }}</p>
+                </div>
+                <!-- <ul class="social-links list-inline">
+                  <li class="list-inline-item">
+                    <a
+                      title=""
+                      data-placement="top"
+                      data-toggle="tooltip"
+                      class="tooltips"
+                      href=""
+                      data-original-title="Facebook"
+                      ><i class="fa fa-facebook"></i
+                    ></a>
+                  </li>
+                  <li class="list-inline-item">
+                    <a
+                      title=""
+                      data-placement="top"
+                      data-toggle="tooltip"
+                      class="tooltips"
+                      href=""
+                      data-original-title="Twitter"
+                      ><i class="fa fa-twitter"></i
+                    ></a>
+                  </li>
+                  <li class="list-inline-item">
+                    <a
+                      title=""
+                      data-placement="top"
+                      data-toggle="tooltip"
+                      class="tooltips"
+                      href=""
+                      data-original-title="Skype"
+                      ><i class="fa fa-skype"></i
+                    ></a>
+                  </li>
+                </ul> -->
+                <button
+                  type="button"
+                  class="
+                    btn btn-success
+                    mt-3
+                    mb-3
+                    btn-rounded
+                    waves-effect
+                    w-md
+                    waves-light
+                  "
+                >
+                  Edit
+                </button>
+                <button
+                  type="button"
+                  class="
+                    btn btn-danger
+                    mt-3
+                    ml-2
+                    mb-3
+                    btn-rounded
+                    waves-effect
+                    w-md
+                    waves-light
+                  "
+                >
+                  Delete
+                </button>
+                <!-- <div class="mt-4">
+                  <div class="row">
+                    <div class="col-4">
+                      <div class="mt-3">
+                        <h4>2563</h4>
+                        <p class="mb-0 text-muted">Wallets Balance</p>
+                      </div>
+                    </div>
+                    <div class="col-4">
+                      <div class="mt-3">
+                        <h4>6952</h4>
+                        <p class="mb-0 text-muted">Income amounts</p>
+                      </div>
+                    </div>
+                    <div class="col-4">
+                      <div class="mt-3">
+                        <h4>1125</h4>
+                        <p class="mb-0 text-muted">Total Transactions</p>
+                      </div>
+                    </div>
+                  </div>
+                </div> -->
+              </div>
+            </div>
+          </div>
+          <!-- end col -->
+        </div>
+
+        <!-- end row -->
+      </div>
+      <!-- container -->
+    </div>
+  </body>
+</html>
