--- a/employeemanagement-fontend-app/src/app/app.component.html
+++ b/employeemanagement-fontend-app/src/app/app.component.html
@@ -23,7 +23,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <button type="button" class="btn-sm btn-primary">
+              <button
+                type="button"
+                class="btn-sm btn-primary"
+                data-bs-toggle="modal"
+                data-bs-target="#addModal"
+               
+              >
                 Add Employee
               </button>
             </li>
@@ -43,7 +49,7 @@
       </div>
     </nav>
     <div class="content">
-      <div class="container">
+      <div class="container" id="main-container">
         <div class="row">
           <div class="col-sm-4">
             <a
@@ -71,7 +77,7 @@
                   />
                 </div>
                 <div class="">
-                  <h4>{{ employee?.name }}</h4>
+                  <h4 class="mt-3">{{ employee?.name }}</h4>
                   <p class="text-muted">
                     {{ employee?.jobTitle }}<span>| </span
                     ><span
@@ -84,41 +90,6 @@
                 <div class="">
                   <p class="text-muted">Phone : {{ employee?.phone }}</p>
                 </div>
-                <!-- <ul class="social-links list-inline">
-                  <li class="list-inline-item">
-                    <a
-                      title=""
-                      data-placement="top"
-                      data-toggle="tooltip"
-                      class="tooltips"
-                      href=""
-                      data-original-title="Facebook"
-                      ><i class="fa fa-facebook"></i
-                    ></a>
-                  </li>
-                  <li class="list-inline-item">
-                    <a
-                      title=""
-                      data-placement="top"
-                      data-toggle="tooltip"
-                      class="tooltips"
-                      href=""
-                      data-original-title="Twitter"
-                      ><i class="fa fa-twitter"></i
-                    ></a>
-                  </li>
-                  <li class="list-inline-item">
-                    <a
-                      title=""
-                      data-placement="top"
-                      data-toggle="tooltip"
-                      class="tooltips"
-                      href=""
-                      data-original-title="Skype"
-                      ><i class="fa fa-skype"></i
-                    ></a>
-                  </li>
-                </ul> -->
                 <button
                   type="button"
                   class="
@@ -130,6 +101,7 @@
                     w-md
                     waves-light
                   "
+                  (click)="onOpenModal(employee,'edit')"
                 >
                   Edit
                 </button>
@@ -145,40 +117,118 @@
                     w-md
                     waves-light
                   "
+                  (click)="onOpenModal(employee,'delete')"
                 >
                   Delete
                 </button>
-                <!-- <div class="mt-4">
-                  <div class="row">
-                    <div class="col-4">
-                      <div class="mt-3">
-                        <h4>2563</h4>
-                        <p class="mb-0 text-muted">Wallets Balance</p>
-                      </div>
-                    </div>
-                    <div class="col-4">
-                      <div class="mt-3">
-                        <h4>6952</h4>
-                        <p class="mb-0 text-muted">Income amounts</p>
-                      </div>
-                    </div>
-                    <div class="col-4">
-                      <div class="mt-3">
-                        <h4>1125</h4>
-                        <p class="mb-0 text-muted">Total Transactions</p>
-                      </div>
-                    </div>
-                  </div>
-                </div> -->
               </div>
             </div>
           </div>
-          <!-- end col -->
         </div>
-
-        <!-- end row -->
       </div>
       <!-- container -->
+    </div>
+
+    <!-- Add Modal  -->
+    <div
+      class="modal fade"
+      id="#addModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">...</div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Update Modal  -->
+    <div
+      class="modal fade"
+      id="#updateModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">...</div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Delete Modal  -->
+    <div
+      class="modal fade"
+      id="#deleteModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">...</div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
