--- a/employeemanagement-fontend-app/src/app/app.component.html
+++ b/employeemanagement-fontend-app/src/app/app.component.html
@@ -102,6 +102,7 @@
                   "
                   data-bs-toggle="modal"
                   data-bs-target="#updateModal"
+                  (click)="updateButton(employee)"
                 >
                   Edit
                 </button>
@@ -225,6 +226,7 @@
     </div>
 
     <!-- Update Modal  -->
+
     <div
       class="modal fade"
       id="updateModal"
@@ -232,26 +234,45 @@
       aria-labelledby="exampleModalLabel"
       aria-hidden="true"
     >
-      <div class="modal-dialog">
+      <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel">Update Employee</h5>
             <button
               type="button"
               class="btn-close"
-              data-bs-dismiss="modal"
+              data-dismiss="modal"
               aria-label="Close"
             ></button>
           </div>
           <div class="modal-body">
-            <form>
+            <form #editForm="ngForm">
               <div class="mb-2">
                 <label for="exampleInputEmail1" class="form-label">Name</label>
                 <input
                   type="text"
                   class="form-control"
-                  id="exampleInputEmail1"
-                  aria-describedby="emailHelp"
+                  id="name"
+                  ngModel="{{ updateEmployee?.name }}"
+                  name="name"
+                />
+              </div>
+              <div class="mb-2">
+                <input
+                  type="hidden"
+                  class="form-control"
+                  id="id"
+                  name="id"
+                  ngModel="{{ updateEmployee?.id }}"
+                />
+              </div>
+              <div class="mb-2">
+                <input
+                  type="hidden"
+                  class="form-control"
+                  id="userCode"
+                  name="userCode"
+                  ngModel="{{ updateEmployee?.employeeCode }}"
                 />
               </div>
               <div class="mb-2">
@@ -259,8 +280,9 @@
                 <input
                   type="email"
                   class="form-control"
-                  id="exampleInputEmail1"
-                  aria-describedby="emailHelp"
+                  id="email"
+                  ngModel="{{ updateEmployee?.email }}"
+                  name="email"
                 />
               </div>
               <div class="mb-2">
@@ -270,8 +292,9 @@
                 <input
                   type="text"
                   class="form-control"
-                  id="exampleInputEmail1"
-                  aria-describedby="emailHelp"
+                  id="jobTitle"
+                  ngModel="{{ updateEmployee?.jobTitle }}"
+                  name="jobTitle"
                 />
               </div>
               <div class="mb-2">
@@ -279,32 +302,41 @@
                 <input
                   type="text"
                   class="form-control"
-                  id="exampleInputEmail1"
-                  aria-describedby="emailHelp"
+                  id="phone"
+                  ngModel="{{ updateEmployee?.phone }}"
+                  name="phone"
                 />
               </div>
-              <div class="mb-2">
+              <div class="mb-4">
                 <label for="exampleInputEmail1" class="form-label"
                   >Image URL</label
                 >
                 <input
                   type="text"
                   class="form-control"
-                  id="exampleInputEmail1"
-                  aria-describedby="emailHelp"
+                  id="imgUrl"
+                  ngModel="{{ updateEmployee?.imgUrl }}"
+                  name="imgUrl"
                 />
               </div>
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-bs-dismiss="modal"
+                  id="add-empl-close"
+                >
+                  Close
+                </button>
+                <button
+                  (click)="onUpdateEmployee(editForm.value)"
+                  type="submit"
+                  class="btn btn-primary"
+                >
+                  Save changes
+                </button>
+              </div>
             </form>
-          </div>
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-secondary"
-              data-bs-dismiss="modal"
-            >
-              Close
-            </button>
-            <button type="button" class="btn btn-primary">Save changes</button>
           </div>
         </div>
       </div>
