--- a/employeemanagement-fontend-app/src/app/app.component.html
+++ b/employeemanagement-fontend-app/src/app/app.component.html
@@ -8,7 +8,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Employee Management</a>
+        <a class="navbar-brand" href="#">Employee Management Dashboard</a>
         <button
           class="navbar-toggler"
           type="button"
