search bar update

--- a/employeemanagement-fontend-app/src/app/app.component.html
+++ b/employeemanagement-fontend-app/src/app/app.component.html
@@ -37,7 +37,7 @@
             <input
               class="form-control me-2"
               type="search"
-              placeholder="Search"
+              placeholder="Search Employee"
               aria-label="Search"
             />
             <button class="btn btn-outline-primary ml-2" type="submit">
