--- a/employeemanagement-fontend-app/src/app/app.component.html
+++ b/employeemanagement-fontend-app/src/app/app.component.html
@@ -29,7 +29,7 @@
                 data-bs-toggle="modal"
                 data-bs-target="#addModal"
               >
-                Add Employee
+                Add 
               </button>
             </li>
           </ul>
